--- a/templates/data_objects.cpp.jinja
+++ b/templates/data_objects.cpp.jinja
@@ -43,21 +43,21 @@ struct {{ coo.name }}  {
 
     template<typename OOT>
     {{ coo.name }} set_oo(typename OOT::OOType v) {
-        static_assert(oneof_helper::ContainsType<OOT, OOEnum::EnumCollector>::value);
+        static_assert(oneof_helper::ContainsType<OOT, T_OOEnum::EnumCollector>::value);
         oo_selector.set_enum<OOT>();
         oo_value.set(v);
         return *this;
     }
     template<typename OOT>
     typename OOT::OOType *get_oo() const {
-        static_assert(oneof_helper::ContainsType<OOT, OOEnum::EnumCollector>::value);
+        static_assert(oneof_helper::ContainsType<OOT, T_OOEnum::EnumCollector>::value);
         if(oo_selector.is_enum<OOT>())
             return oo_value.get<typename OOT::OOType>();
         return nullptr;
     }
     template<typename OOT>
     bool is_oo_value() const {
-        static_assert(oneof_helper::ContainsType<OOT, OOEnum::EnumCollector>::value);
+        static_assert(oneof_helper::ContainsType<OOT, T_OOEnum::EnumCollector>::value);
         if(oo_selector.is_enum<OOT>())
             return true;
         return false;
