--- a/templates/data_objects.cpp.jinja
+++ b/templates/data_objects.cpp.jinja
@@ -32,7 +32,7 @@ struct {{ coo.name }}  {
 
     typedef BitisEnum<bitis_helper::Collector<{%- for ca in coo.attributes %}
         OO_{{ca.base.name|pascal_case}}{% if !loop.last %}, {% endif %}{%- endfor %}
-    >, {{coo.dyn_bits}}> T_OOEnum;
+    >, OO_{{coo.default_attrib_name|pascal_case}}, {{coo.dyn_bits}}> T_OOEnum;
     T_OOEnum oo_selector;
 
     typedef oneof_helper::UnionT<
@@ -91,7 +91,7 @@ struct {{ coo.name }}  {
 {%- if let Some(comment_impl) = cm.comment -%}
 ///{{comment_impl}}
 {%- endif -%}
-struct {{cm.name|pascal_case}} {
+struct {{cm.name}} {
 {%- for ca in cm.attributes %}
     typedef {% include "data_object_attr_type.cpp.jinja" %} {{ca.base.name|pascal_case}}_T;
 {%- endfor %}
@@ -105,28 +105,28 @@ struct {{cm.name|pascal_case}} {
 
     static const char *msg_attr[];
 
-    std::size_t serialize(BitisSerializer &ser) const {
+    std::size_t serialize(BitisSerializer &ser) {
         return message_helper::msg_serialize(this, ser);
     }
-    static bitis_helper::BitiaDeserializerHelper<{{cm.name|pascal_case}}> deserialize(BitisDeserializer &des) {
-        return message_helper::msg_deserialize<{{cm.name|pascal_case}}>(des);
+    static bitis_helper::BitiaDeserializerHelper<{{cm.name}}> deserialize(BitisDeserializer &des) {
+        return message_helper::msg_deserialize<{{cm.name}}>(des);
     }
 
     void print(int16_t indent=0) {
-        printf("{{cm.name|pascal_case}}{ ");
+        printf("{{cm.name}}{ ");
         if (indent>=0) printf("\n");
         message_helper::msg_print(this, (indent>=0) ? (2 + indent) : indent, msg_attr);
         print_indent(indent); printf("}");
         // if (indent>=0) printf("\n");
     }
 
-    bool is_equal(const {{cm.name|pascal_case}} &other) const {
+    bool is_equal(const {{cm.name}} &other) const {
         return {% for ca in cm.attributes +%}{{ca.base.name}}==other.{{ca.base.name}}{% if !loop.last %} && {% endif %} {%- endfor %};
    }
-    bool operator==(const {{cm.name|pascal_case}} &other) const { return is_equal(other); }
-    bool operator!=(const {{cm.name|pascal_case}} &other) const { return !is_equal(other); }
+    bool operator==(const {{cm.name}} &other) const { return is_equal(other); }
+    bool operator!=(const {{cm.name}} &other) const { return !is_equal(other); }
 };
-const char *{{cm.name|pascal_case}}::msg_attr[] = { {%- for ca in cm.attributes -%}"{{ca.base.name}}"{% if !loop.last %}, {% endif %}{%- endfor -%}};
+const char *{{cm.name}}::msg_attr[] = { {%- for ca in cm.attributes -%}"{{ca.base.name}}"{% if !loop.last %}, {% endif %}{%- endfor -%}};
 
 {%- endif -%}{%- endfor -%}
 
