--- a/templates/data_objects.rs.jinja
+++ b/templates/data_objects.rs.jinja
@@ -23,16 +23,25 @@ impl std::fmt::Display for {{ ce.name }} {
 {# *****************************************************************#}
 // Enums for oneof
 {%+ for (_, coo) in d.oos -%}
-#[derive(BiserdiOneOf, Debug, Clone, Copy, PartialEq)]
+#[derive(BiserdiOneOf, Debug, Clone, PartialEq)]
 #[biserdi_enum_id_dynbits({{coo.dyn_bits}})]
 #[allow(nonstandard_style)]
 pub enum {{ coo.name }} {
-{%- for ca in coo.attributes +%}
-{%- include "data_oo_attr.rs.jinja" %}
+{%- for ca in coo.attributes %}
+{% if let Some(comment_impl) = ca.base.comment -%}
+  //{{comment_impl}}
+{%- endif %}  {% include "data_oo_attr.rs.jinja" %}),
 {%- endfor %}
 }
 impl std::fmt::Display for {{ coo.name }} {
   fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result { write!(f, "{:?}", self) }
+}
+impl Default for {{ coo.name }} {
+{%- for ca in coo.attributes -%}
+  {%- if coo.default_attrib_name == ca.base.name %}
+  fn default() -> Self { Self::{%- include "data_oo_attr.rs.jinja" -%}::default()) }
+  {%- endif %}
+{%- endfor %}
 }
 {% endfor -%}
 
@@ -45,7 +54,7 @@ impl std::fmt::Display for {{ coo.name }} {
 {%- endif -%}
 #[derive(BiserdiMsg, Debug, Clone, PartialEq, Default)]
 #[allow(nonstandard_style)]
-pub struct {{cm.name|pascal_case}} {
+pub struct {{cm.name}} {
 {%- if let Some(p) = cm.parent -%}// parent: {{ p }}{%- endif -%}
 {%- for ca in cm.attributes +%}
   {% include "data_object_attr.rs.jinja" %}
