--- a/templates/data_oo_attr.rs.jinja
+++ b/templates/data_oo_attr.rs.jinja
@@ -1,7 +1,4 @@
-{%- if let Some(comment_impl) = ca.base.comment -%}
-  //{{comment_impl}}
-{%- endif %}
-  {{ca.base.name|pascal_case}}({%~ if ca.base.is_optional -%}Option<{%- endif -%}
+{{ca.base.name|pascal_case}}({%~ if ca.base.is_optional -%}Option<{%- endif -%}
 {%- if let Some(repeated_type) = ca.base.is_repeated_and_size -%}
 {%- match repeated_type -%}
 {%- when DynOrFixedType::Dyn(_) ~%}Vec<
@@ -15,4 +12,4 @@
 {%- when DynOrFixedType::Fixed with (s) -%};{{s}}]
 {%- endmatch -%}
 {%- endif -%}
-{%- if ca.base.is_optional -%}>{%- endif -%}),
+{%- if ca.base.is_optional -%}>{%- endif -%}
