Fixed enum handling in python

--- a/templates/py_type_hints.pyi.jinja
+++ b/templates/py_type_hints.pyi.jinja
@@ -4,7 +4,7 @@ from enum import Enum
 {# *****************************************************************#}
 {# *****************************************************************#}
 # Enums
-{%+ for ce in d.enums ~%}
+{# {%+ for ce in d.enums ~%}
 class {{ ce.name }}(Enum):
 {%- if let Some(comment_impl) = ce.comment %}
   """
@@ -15,7 +15,7 @@ class {{ ce.name }}(Enum):
   {{ cv|pascal_case }} = {{loop.index}}
 {%- endfor %}
 {%- endfor %}
-
+#}
 {# *****************************************************************#}
 {# *****************************************************************#}
 # *** Enums for oneof
