Improved comment handling in cpp code

--- a/templates/data_object_attr.cpp.jinja
+++ b/templates/data_object_attr.cpp.jinja
@@ -1,4 +1,3 @@
-{%- if let Some(comment_impl) = ca.base.comment -%}
-//{{comment_impl}}
-{%- endif %}
-    {{ca.base.name|pascal_case}}_T {{ca.base.name}};
+{%- if let Some(comment_impl) = ca.base.comment %}
+    //{{comment_impl}}
+{%- endif %}    {{ca.base.name|pascal_case}}_T {{ca.base.name}};
