--- a/templates/data_objects.cpp.jinja
+++ b/templates/data_objects.cpp.jinja
@@ -1,3 +1,5 @@
+#pragma once
+
 #include "{{bitis_header_lib_file_name}}"
 #include <optional>
 
@@ -40,12 +42,14 @@ struct {{ coo.name }}  {
     >, OO_{{coo.default_attrib_name|pascal_case}}, {{coo.dyn_bits}}> T_OOEnum;
     T_OOEnum oo_selector;
 
-    typedef oneof_helper::UnionT<
+    typedef oneof_helper::UnionT<  // UnionDynSizeT
         {% for ca in coo.attributes -%}OO_{{ca.base.name|pascal_case}}::OOType{% if !loop.last %}, {% endif %}{%- endfor %}
     > T_OOValue;
     T_OOValue oo_value;
+    //uint8_t *oo_value_ptr;
 
-    {{ coo.name }}() : oo_selector(), oo_value() {}
+    {{ coo.name }}() : oo_selector() /*, oo_value_ptr(nullptr)*/ {}
+    //~{{ coo.name }}() { delete [] oo_value_ptr; }
 
     template<typename OOT>
     {{ coo.name }} set_oo(typename OOT::OOType v) {
@@ -53,12 +57,18 @@ struct {{ coo.name }}  {
         oo_selector.set_enum<OOT>();
         oo_value.set(v);
         return *this;
+
+        //delete [] oo_value_ptr;
+        //oo_value_ptr = new uint8_t[sizeof(typename OOT::OOType)];
+        //memcpy(oo_value_ptr, &v, sizeof(v));
+        //return *this;
     }
     template<typename OOT>
     typename OOT::OOType *get_oo() const {
         static_assert(oneof_helper::ContainsType<OOT, T_OOEnum::EnumCollector>::value);
         if(oo_selector.is_enum<OOT>())
             return oo_value.get<typename OOT::OOType>();
+            //return (typename OOT::OOType*) oo_value_ptr;
         return nullptr;
     }
     template<typename OOT>
